--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -409,7 +410,7 @@
         <tbody>
           <tr>
             <td style="padding:2.5%;width:40%;max-width:30%">
-              <img style="width:100%;max-width:100%;border-radius:40%;" alt="Saqalain Abbas" src="https://github.com/Saqlain3025/Profile/blob/main/images/Profile.png">
+              <img style="width:100%;max-width:100%;border-radius:40%;" alt="Saqalain Abbas" src="images/Profile.png">
             </td>
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:left;">
@@ -670,3 +671,4 @@
 </body>
 
 </html>
+
